<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewEventConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:clickable="true"
    tools:context="com.joinalongapp.navbar.ViewEventFragment">

    <ImageButton
        android:id="@+id/viewEventBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
...
        android:textColor="?attr/defaultSubtitleTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <TextView
        android:id="@+id/viewEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="314dp"
        android:maxHeight="64dp"
        android:text="@string/view_events_default_title"
        android:textColor="?attr/defaultTextColor"
...
        android:textColor="?attr/defaultTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/eventViewMembersTitle"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <Button
        android:id="@+id/joinEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/join_event"
        android:textColor="?attr/defaultWhiteWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/eventOptions"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
...
