...
    android:id="@+id/frameLayoutSearch"
    android:background="?attr/backgroundColor"
    tools:context=".SearchScreenActivity">


    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:textColor="?attr/defaultTextColor"
        android:layout_marginRight="5dp"
...
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="?attr/actionModeCloseDrawable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchPeopleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="675dp"
        android:layout_gravity="bottom" />

    <TextView
        android:id="@+id/searchNoResults"
...
