...
    <string name="view_events_members_title">Members</string>
    <string name="view_events_location_title">Location</string>
    <string name="view_events_begin_date_title">Begin Date</string>
    <string name="view_events_end_date_title">End Date</string>
    <string name="join_event">Join!</string>
    <string name="book_rideshare">Book Rideshare</string>
    <string name="event_leave_title">Leave Event</string>
    <string name="event_report_title">Report Event</string>
    <string name="event_delete_title">Delete Event</string>
    <string name="event_edit_title">Edit Event</string>

    <!--TODO: idk if this is best place for id-->
    <!--LOGIN-->
...
